tests/NormalTests/paczka2/big_fuzzy/67376876.err
Error in line 1: iZ3pt3XMw A380 97,9
Error in line 2: iZ3pt3XMw A873 44,1
Error in line 30: Ob2y9b A22 94,1
Error in line 56: Ob2y9b A873 17,5
Error in line 55: S567 A22 47,9
Error in line 69: upnL A873 32,6
Error in line 98: 5VWpuXBB2 A380 64,9
Error in line 108: 68ectV A873 40,0
Error in line 117: S567 A873 7,5
Error in line 127: 5VWpuXBB2 A22 77,4
Error in line 134: OtvAIW A380 255,8
Error in line 144: iZ3pt3XMw A22 77,6
Error in line 152: iZ3pt3XMw S>67 180,7
Error in line 151: iZ3pt3XMw S567 44,4
Error in line 154: S567 A873 11,9
Error in line 160: S567 A22 33,34
Error in line 161: iZ3pt3XMw A380 -1,3
Error in line 159: Ob2y9b A22 71,0
Error in line 155: S567 S567 65,9
Error in line 141: upnL A380 196,1
Error in line 153: iZ3pt3XMw A380 69,6
Error in line 168: iZ3pt3XMw A873 36,1
Error in line 171: upnL A22 -2,3
Error in line 165: S567 A22 85,2
Error in line 173: S567 A380 25,5
Error in line 176: upnL A873 72,8
Error in line 194: upnL A380 77,6
Error in line 203: OtvAIW A873 18,1
Error in line 206: Ob2y9b A873 95,9
Error in line 208: iZ3pt3XMw A380 118,0
Error in line 211: S567 A380 30,2
Error in line 219: Ob2y9b A380 57,9
Error in line 239: S567 A873 29,0
Error in line 243: Ob2y9b A873 0,f
Error in line 224: Ob2y9b A873 0,2
Error in line 246: Ob2y9b A22 63,5
